--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,11 @@ body {
 }
 
 .top-section h1 {
-  font-size: 3rem;
+  font-size: 2rem;
   margin: 0;
   line-height: 97.3%;
-  margin: 1rem 0;max-width: 525px;
+  margin: 1rem 0;
+  max-width: 525px;
 
 }
 
@@ -49,7 +50,7 @@ body {
 }
 
 .intro-buttons {
-  margin-bottom: 70px;
+  margin-bottom: 30px;
 }
 
 .input-search {
@@ -64,6 +65,7 @@ body {
   border-radius: 1000px;
   transition: background-color .3s ease-out, border .3s ease-out, color .3s ease-out;
 }
+
 .our-btn {
   display: inline-block;
   font-size: 1.125rem;
@@ -212,7 +214,7 @@ body {
 .pet-card {
   overflow: hidden;
   display: grid;
-  grid-template-columns: 165px 1fr;
+  grid-template-columns: 1fr;
   border-radius: 20px;
   border: 1px solid #F3F3F3;
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.08);
