--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html {
 
 body {
   font-family: 'Source Sans 3', sans-serif;
+  min-width: 330px;
 }
 
 .top-section-wrapper {
@@ -23,7 +24,6 @@ body {
 .top-section {
   color: white;
   padding-top: 30px;
-  max-width: 500px;
   margin: 0 auto;
   position: relative;
 }
@@ -55,6 +55,7 @@ body {
 
 .input-search {
   display: inline-block;
+  width: 250px;;
   font-size: 1.125rem;
   font-weight: 600;
   background-color: #ffffff;
@@ -62,12 +63,13 @@ body {
   color: #000000;
   text-decoration: none;
   padding: 13px 25px;
-  border-radius: 1000px;
-  transition: background-color .3s ease-out, border .3s ease-out, color .3s ease-out;
+  margin: 0 10px 10px 0;
+  border-radius: 10px;
 }
 
 .our-btn {
   display: inline-block;
+  width: 303px;
   font-size: 1.125rem;
   font-weight: 600;
   background-color: #475AFF;
@@ -75,7 +77,7 @@ body {
   color: #FFF;
   text-decoration: none;
   padding: 13px 25px;
-  border-radius: 1000px;
+  border-radius: 10px;
   transition: background-color .3s ease-out, border .3s ease-out, color .3s ease-out;
 }
 
@@ -120,7 +122,7 @@ body {
   row-gap: 16px;
 }
 
-@media screen and (min-width: 580px) {
+/* @media screen and (min-width: 580px) {
   .intro-features {
     grid-template-columns: 1fr 1fr;
   }
@@ -130,7 +132,7 @@ body {
   .intro-features {
     grid-template-columns: 1fr 1fr;
   }
-}
+} */
 
 .circle {
   width: 617px;
@@ -172,30 +174,6 @@ body {
   line-height: 1;
 }
 
-.pet-filter {
-  color: #9F9F9F;
-  font-size: 1.15rem;
-}
-
-.pet-filter button {
-  background-color: transparent;
-  border: none;
-  font-family: 'Source Sans 3', sans-serif;
-  font-size: 1.15rem;
-  color: #9F9F9F;
-  cursor: pointer;
-}
-
-.pet-filter button:hover {
-  color: #7d7d7d;
-}
-
-.pet-filter .active,
-.pet-filter .active:hover {
-  color: #475AFF;
-  text-decoration: underline;
-}
-
 .site-footer p {
   text-align: center;
   color: #A6A6A6;
@@ -204,14 +182,14 @@ body {
   padding: 0 0 65px 0;
 }
 
-.list-of-pets {
+.list-of-episodes {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
   column-gap: 34px;
   row-gap: 16px;
 }
 
-.pet-card {
+.episode-card {
   overflow: hidden;
   display: grid;
   grid-template-columns: 1fr;
@@ -220,59 +198,59 @@ body {
   box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.08);
 }
 
-.pet-card-photo {
+.episode-card-photo {
   order: 1;
   grid-row: 1;
 }
 
-.pet-card-photo img {
+.episode-card-photo img {
   width: 100%;
   height: 100%;
   display: block;
   object-fit: cover;
 }
 
-.pet-card-text {
+.episode-card-text {
   padding: 18px 16px;
 }
 
-.pet-card-text h3 {
+.episode-card-text h3 {
   margin: 0 0 5px 0;
   font-size: 1.625rem;
   font-weight: 600;
 }
 
-.pet-description {
+.episode-description {
   font-size: .9rem;
   margin: 0 0 1rem 0;
   color: #626262;
   line-height: 150%;
 }
 
-.pet-age {
+.episode-age {
   color: #A2A2A2;
   font-size: .85rem;
   margin: 0;
 }
 
-@media screen and (min-width: 16000px) {
-  .pet-description {
+@media screen and (min-width: 800px) {
+  .episode-description {
     font-size: 1rem;
   }
 
-  .pet-card-text {
+  .episode-card-text {
     padding: 21px 29px;
   }
 
-  .list-of-pets {
+  .list-of-episodes {
     row-gap: 28px;
   }
 
-  .pet-filter {
+  .episode-filter {
     font-size: 1.375rem;
   }
 
-  .pet-filter button {
+  .episode-filter button {
     font-size: 1.375rem;
   }
 
@@ -293,7 +271,8 @@ body {
   }
 
   .top-section {
-    padding-top: 139px;
-    padding-bottom: 139px;
+    padding-top: 39px;
+    padding-bottom: 39px;
   }
 }
+
