--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,11 @@ body {
   background-color: #001D37;
   padding-left: 16px;
   padding-right: 16px;
+  max-height: 210px;
 }
 
 .top-section {
   color: white;
-  padding-top: 30px;
   margin: 0 auto;
   position: relative;
 }
@@ -100,38 +100,6 @@ body {
   margin-right: 10px;
 }
 
-.intro-feature {
-  padding: 33px 25px;
-  border: 1px solid rgba(255, 255, 255, .24);
-}
-
-.intro-feature p {
-  margin: 0;
-  font-size: 1.0625rem;
-}
-
-.intro-feature h2 {
-  font-size: 1.5rem;
-  margin: 31px 0 3px 0;
-}
-
-.intro-features {
-  display: grid;
-  column-gap: 16px;
-  row-gap: 16px;
-}
-
-/* @media screen and (min-width: 580px) {
-  .intro-features {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media screen and (min-width: 900px) {
-  .intro-features {
-    grid-template-columns: 1fr 1fr;
-  }
-} */
 
 .circle {
   width: 617px;
@@ -159,7 +127,7 @@ body {
 
 .page-section {
   background-color: #FFF;
-  padding: 70px 16px;
+  padding: 20px 16px;
 }
 
 .page-section-inner {
@@ -168,7 +136,7 @@ body {
 }
 
 .page-section-title {
-  font-size: 2rem;
+  font-size: 1.5rem;
   margin: 0 0 20px 0;
   line-height: 1;
 }
@@ -184,7 +152,7 @@ body {
 .list-of-episodes {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(390px, 1fr));
-  column-gap: 34px;
+  column-gap: 16px;
   row-gap: 16px;
 }
 
@@ -196,7 +164,7 @@ body {
   grid-template-columns: 1fr;
   border-radius: 20px;
   border: 1px solid #F3F3F3;
-  box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.08);
+  box-shadow: 4px 4px 5px 0px rgba(0, 0, 0, 0.08);
 }
 
 .episode-card-photo {
@@ -234,7 +202,7 @@ body {
   margin: 0;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 660px) {
   .episode-description {
     font-size: 1rem;
   }
@@ -244,8 +212,12 @@ body {
   }
 
   .list-of-episodes {
-    row-gap: 28px;
+    row-gap: 16px;
     width: 100%;
+  }
+
+  .episode-card {
+    max-width: 100%;
   }
 
   .episode-filter {
@@ -257,11 +229,11 @@ body {
   }
 
   .page-section-title {
-    font-size: 5.31rem;
+    font-size: 4rem;
   }
 
   .page-section {
-    padding: 130px 16px;
+    padding: 30px 16px;
   }
 
   .intro-buttons {
@@ -269,12 +241,12 @@ body {
   }
 
   .top-section h1 {
-    font-size: 6.25rem;
+    font-size: 4rem;
   }
 
   .top-section {
-    padding-top: 39px;
-    padding-bottom: 39px;
+    padding-top: 9px;
+    padding-bottom: 0;
   }
 }
 
